# FootballScores

./: Presentation.md  meson.build
css/: pandoc.css  vmg.css
data/: en-championship-2016-2017.csv  en-championship-2016-2017.csv~
src/: Result.h  Timing.h  bind_eg.cpp  bsearch.cpp  fail_delete_eg.cpp  for_each_eg.cpp  i_invalidation.cpp  stats_eg.cpp  stlsizeof.cpp
