project('scores', 'cpp', default_options : ['cpp_std=c++17'])

add_global_arguments('-Wall', language : 'cpp')
add_global_arguments('-Werror', language : 'cpp')
add_global_arguments('-g', language : 'cpp')

executable('i_invalidation_eg', 'src/i_invalidation.cpp')
executable('stats_eg', 'src/stats_eg.cpp')
executable('fail_delete_eg', 'src/fail_delete_eg.cpp')
executable('bsearch_eg', 'src/bsearch.cpp')
executable('bind_eg', 'src/bind_eg.cpp')
executable('stlsizeof', 'src/stlsizeof.cpp')